--- a/jenkins/docker-compose.yml
+++ b/jenkins/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   jenkins:
     build: .
-    container_name: jenkins
+    container_name: jenkins1
     user: root
     env_file:
       - .env
@@ -14,7 +14,6 @@ services:
       - jenkins_home:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
       - ${KUBECONFIG_PATH}:/root/.kube/config
-      - ${MINIKUBE_PATH}:/root/.minikube
 
 volumes:
   jenkins_home:
