--- a/jenkins/.env
+++ b/jenkins/.env
@@ -1,20 +1,20 @@
 # путь до локального kubeconfig-файла (абсолютный!)
-KUBECONFIG_PATH=/Users/username/.kube/jenkins_kubeconfig.yaml
+KUBECONFIG_PATH=D:\prog\YandexHelmApp\part2\jenkins_kubeconfig.yaml
 
 # токен для ghcr
 GHCR_TOKEN=ghp_
 
 # имя пользователя GitHub
-GITHUB_USERNAME=username
+GITHUB_USERNAME=no-milk-today
 
 # токен для GitHub
 GITHUB_TOKEN=ghp_
 
 # репозиторий
-GITHUB_REPOSITORY=username/YandexHelmApp
+GITHUB_REPOSITORY=no-milk-today/wrkshopk8s
 
 # Docker Registry
-DOCKER_REGISTRY=ghcr.io/username
+DOCKER_REGISTRY=ghcr.io/no-milk-today
 
 # пароль к базе данных
 DB_PASSWORD=mypass
