--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -33,8 +33,8 @@ pipeline {
         stage('Build Docker Images') {
             steps {
                 sh """
-                docker build -t customer-service:${IMAGE_TAG} -f customer-service/Dockerfile .
-                docker build -t order-service:${IMAGE_TAG} -f order-service/Dockerfile .
+                docker build -t customer-service:${IMAGE_TAG} customer-service
+                docker build -t order-service:${IMAGE_TAG} order-service
                 """
             }
         }
