--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>customer-service</module>
         <module>order-service</module>
+        <module>clients</module>
     </modules>
 
     <properties>
