--- a/clients/src/main/resources/clients-default.properties
+++ b/clients/src/main/resources/clients-default.properties
@@ -1,3 +1,3 @@
-clients.customer.url=http://localhost:8081
+clients.order.url=http://localhost:8081
 clients.fraud.url=http://localhost:8082
 clients.notification.url=http://localhost:8083
