#-pl <module> (project list) собирает только указанный модуль, -am (also make) собирает требуемые модули в реакторе (например, clients) — родительский pom.xml виден, потому что команда запускается из корня.

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -11,26 +11,16 @@ pipeline {
     }
 
     stages {
-        stage('Maven reactor build') {
-          steps {
-            // запуск из корня репозитория (там, где общий parent/aggregator POM)
-            sh 'mvn -B -U -DskipTests clean install'
-          }
-        }
         stage('Build & Unit Tests') {
             parallel {
                 stage('Customer Service') {
                     steps {
-                        dir('customer-service') {
-                            sh 'mvn clean test'
-                        }
+                        sh 'mvn -pl customer-service -am clean test'
                     }
                 }
                 stage('Order Service') {
                     steps {
-                        dir('order-service') {
-                            sh 'mvn clean test'
-                        }
+                        sh 'mvn -pl order-service -am clean test'
                     }
                 }
             }
