--- a/customer-service/Dockerfile
+++ b/customer-service/Dockerfile
@@ -1,19 +1,23 @@
 FROM maven:3.9.9-eclipse-temurin-21 AS build
-
 WORKDIR /app
 
+# Copy root pom and module pom — for dependency caching
 COPY pom.xml .
+COPY customer-service/pom.xml customer-service/pom.xml
 
-RUN mvn dependency:go-offline
+# Copy dependencies (to cache them) without src
+RUN mvn -B -pl customer-service -am dependency:go-offline
 
-COPY src ./src
+# Copy the entire project
+COPY . .
 
-RUN mvn package -DskipTests
+# Build only customer-service and its dependencies
+RUN mvn -B -pl customer-service -am package -DskipTests
 
 FROM eclipse-temurin:21-jre
 WORKDIR /app
 
-COPY --from=build /app/target/customer-service-*.jar app.jar
+COPY --from=build /app/customer-service/target/customer-service-*.jar app.jar
 
 EXPOSE 8080
 
