--- a/order-service/Dockerfile
+++ b/order-service/Dockerfile
@@ -3,6 +3,8 @@ WORKDIR /app
 
 COPY pom.xml .
 COPY order-service/pom.xml order-service/pom.xml
+COPY customer-service/pom.xml customer-service/pom.xml
+COPY clients/pom.xml clients/pom.xml
 
 RUN mvn -B -pl order-service -am dependency:go-offline
 
