#fix deploy to test step. Если в customer-service/values.yaml указать spring.profile: dev, то поднимется с dev.
Если нет → возьмётся из глобального spring.profile: kube.

Если и глобального не будет → дефолт "kube".

--- a/my-microservices-app/charts/customer-service/templates/deployment.yaml
+++ b/my-microservices-app/charts/customer-service/templates/deployment.yaml
@@ -61,7 +61,7 @@ spec:
                   name: {{ .Release.Name }}-customer-db
                   key: password
             - name: SPRING_PROFILES_ACTIVE
-              value: {{ .Values.spring.profile | default .Values.global.spring.profile | default "kube" }}
+              value: {{ get .Values.spring "profile" | default .Values.global.spring.profile | default "kube" | quote }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
