--- a/my-microservices-app/charts/customer-service/templates/deployment.yaml
+++ b/my-microservices-app/charts/customer-service/templates/deployment.yaml
@@ -61,7 +61,7 @@ spec:
                   name: {{ .Release.Name }}-customer-db
                   key: password
             - name: SPRING_PROFILES_ACTIVE
-              value: {{ get .Values.spring "profile" | default .Values.global.spring.profile | default "kube" | quote }}
+              value: "kube"
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
