--- a/clients/src/main/resources/clients-kube.properties
+++ b/clients/src/main/resources/clients-kube.properties
@@ -1,3 +1,1 @@
-clients.order.url=http://order-service:8081
-clients.fraud.url=http://fraud-service:8080
-clients.notification.url=http://notification-service:8080
+clients.order.url=http://order-service
