- Add targetPort configuration to service definitions in both customer-service and order-service - Change Service port from application ports (8080/8081) to standard port 80 for internal cluster communication - Fix customer-service deployment to use targetPort instead of service.port for containerPort - Update umbrella chart values.yaml to reflect correct port mappings
This change enables Feign client communication between customer-service and order-service
within the Kubernetes cluster by properly separating:
- Service port (80): external port used by other pods to connect
- targetPort (8080/8081): internal container port where Spring Boot application listens

Fixes the connection refused error when customer-service attempts to call
order-service via http://order-service endpoint using OrderClient.

--- a/my-microservices-app/charts/customer-service/values.yaml
+++ b/my-microservices-app/charts/customer-service/values.yaml
@@ -40,7 +40,8 @@ securityContext: {}
 
 service:
   type: ClusterIP
-  port: 8080 # Default port, overridden by umbrella
+  port: 80          # Внешний порт для других подов
+  targetPort: 8080  # Реальный порт контейнера Spring Boot
 
 ingress:
   enabled: true
