--- a/my-microservices-app/charts/order-service/templates/deployment.yaml
+++ b/my-microservices-app/charts/order-service/templates/deployment.yaml
@@ -35,7 +35,7 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
-              containerPort: {{ .Values.service.port }} # Use the service port value from values.yaml
+              containerPort: {{ .Values.service.targetPort }} # Use the service targetPort value from values.yaml
               protocol: TCP
           livenessProbe: # Example for Spring Boot Actuator
             httpGet:
