#back to the root

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -15,13 +15,16 @@ pipeline {
             parallel {
                 stage('Customer Service') {
                     steps {
-                        // run from / so that parent pom and modules are visible
-                        sh 'mvn -pl customer-service -am clean test'
+                        dir('customer-service') {
+                            sh 'mvn clean test'
+                        }
                     }
                 }
                 stage('Order Service') {
                     steps {
-                        sh 'mvn -pl order-service -am clean test'
+                        dir('order-service') {
+                            sh 'mvn clean test'
+                        }
                     }
                 }
             }
@@ -30,8 +33,8 @@ pipeline {
         stage('Build Docker Images') {
             steps {
                 sh """
-                docker build -t customer-service:${IMAGE_TAG} -f customer-service/Dockerfile .
-                docker build -t order-service:${IMAGE_TAG} -f order-service/Dockerfile .
+                docker build -t customer-service:${IMAGE_TAG} customer-service
+                docker build -t order-service:${IMAGE_TAG} order-service
                 """
             }
         }
