--- a/my-microservices-app/charts/order-service/templates/service.yaml
+++ b/my-microservices-app/charts/order-service/templates/service.yaml
@@ -8,8 +8,8 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: {{ .Values.service.targetPort }}
+      targetPort: http # Match the container port *name* in the deployment
       protocol: TCP
-      name: http # do we need this?
+      name: http
   selector:
     {{- include "order-service.selectorLabels" . | nindent 4 }} 
