--- a/my-microservices-app/Chart.yaml
+++ b/my-microservices-app/Chart.yaml
@@ -19,13 +19,13 @@ dependencies:
  # Dependency for Customer DB (e.g., PostgreSQL)
   - name: postgresql
     version: "14.2.3" # Using a specific known stable version from Bitnami history
-    repository: "oci://registry-1.docker.io/bitnamicharts"
+    repository: "oci://registry-1.docker.io/bitnamilegacy"
     alias: customer-db # Alias to distinguish this instance
     condition: customer-db.enabled # Allow disabling if needed
 
  # Dependency for Order DB (e.g., PostgreSQL)
   - name: postgresql
     version: "14.2.3" # Using a specific known stable version from Bitnami history
-    repository: "oci://registry-1.docker.io/bitnamicharts"
+    repository: "oci://registry-1.docker.io/bitnamilegacy"
     alias: order-db # Alias for the order DB instance
     condition: order-db.enabled
