--- a/my-microservices-app/Chart.yaml
+++ b/my-microservices-app/Chart.yaml
@@ -18,14 +18,14 @@ dependencies:
 
  # Dependency for Customer DB (e.g., PostgreSQL)
   - name: postgresql
-    version: "14.2.3" # Using a specific known stable version from Bitnami history
-    repository: "oci://registry-1.docker.io/bitnamilegacy"
+    version: "15.5.32" # Using a specific known stable version from Bitnami history
+    repository: "oci://registry-1.docker.io/bitnamicharts"
     alias: customer-db # Alias to distinguish this instance
     condition: customer-db.enabled # Allow disabling if needed
 
  # Dependency for Order DB (e.g., PostgreSQL)
   - name: postgresql
-    version: "14.2.3" # Using a specific known stable version from Bitnami history
-    repository: "oci://registry-1.docker.io/bitnamilegacy"
+    version: "15.5.32" # Using a specific known stable version from Bitnami history
+    repository: "oci://registry-1.docker.io/bitnamicharts"
     alias: order-db # Alias for the order DB instance
     condition: order-db.enabled
