--- a/clients/src/main/resources/clients-kube.properties
+++ b/clients/src/main/resources/clients-kube.properties
@@ -1,2 +1,4 @@
 clients.order.url=http://order-service
 clients.customer.url=http://customer-service
+clients.fraud.url=http://fraud
+clients.notification.url=http://notification
