--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
     <modules>
         <module>customer-service</module>
         <module>order-service</module>
+        <module>fraud-service</module>
+        <module>notification-service</module>
         <module>clients</module>
     </modules>
 
