--- a/customer-service/Dockerfile
+++ b/customer-service/Dockerfile
@@ -6,6 +6,8 @@ WORKDIR /app
 COPY pom.xml .
 COPY customer-service/pom.xml customer-service/pom.xml
 COPY order-service/pom.xml order-service/pom.xml
+COPY fraud-service/pom.xml fraud-service/pom.xml
+COPY notification-service/pom.xml notification-service/pom.xml
 COPY clients/pom.xml clients/pom.xml
 
 # Copy dependencies (to cache them) without src
