Update clients-kube.properties with proper test environment URLs
- Changed URLs to match Helm chart ingress hostnames (order.test.local, customer.test.local)
- These URLs enable proper service-to-service communication in local Kubernetes cluster
- Configured for Docker Desktop Kubernetes with ingress-nginx controller
- Matches /etc/hosts entries for local development testing

--- a/clients/src/main/resources/clients-kube.properties
+++ b/clients/src/main/resources/clients-kube.properties
@@ -1,4 +1,4 @@
-clients.order.url=http://order-service
-clients.customer.url=http://customer-service
-clients.fraud.url=http://fraud
-clients.notification.url=http://notification
+clients.order.url=http://order.test.local
+clients.customer.url=http://customer.test.local
+clients.fraud.url=http://fraud.test.local
+clients.notification.url=http://notification.test.local
