#add fraud and notification into pipeline. fix deployments using kube profile

--- a/clients/src/main/resources/clients-kube.properties
+++ b/clients/src/main/resources/clients-kube.properties
@@ -1,4 +1,4 @@
-clients.order.url=http://order.test.local
-clients.customer.url=http://customer.test.local
-clients.fraud.url=http://fraud.test.local
-clients.notification.url=http://notification.test.local
+clients.order.url=http://order.prod.local
+clients.customer.url=http://customer.prod.local
+clients.fraud.url=http://fraud.prod.local
+clients.notification.url=http://notification.prod.local
