--- a/my-microservices-app/charts/fraud-service/templates/deployment.yaml
+++ b/my-microservices-app/charts/fraud-service/templates/deployment.yaml
@@ -60,6 +60,8 @@ spec:
                 secretKeyRef:
                   name: {{ .Release.Name }}-fraud-db
                   key: password
+            - name: SPRING_PROFILES_ACTIVE
+              value: "kube"
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
