--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -41,6 +41,8 @@ pipeline {
             steps {
                 sh """
                 docker build -t customer-service:${IMAGE_TAG} -f customer-service/Dockerfile .
+                docker build -t fraud-service:${IMAGE_TAG} -f fraud-service/Dockerfile .
+                docker build -t notification-service:${IMAGE_TAG} -f notification-service/Dockerfile .
                 docker build -t order-service:${IMAGE_TAG} -f order-service/Dockerfile .
                 """
             }
