--- a/fraud-service/Dockerfile
+++ b/fraud-service/Dockerfile
@@ -2,19 +2,18 @@ FROM maven:3.9.9-eclipse-temurin-21 AS build
 WORKDIR /app
 
 COPY pom.xml .
-COPY fraudr-service/pom.xml fraudr-service/pom.xml
-COPY order-service/pom.xml order-service/pom.xml
+COPY fraud-service/pom.xml fraud-service/pom.xml
 COPY clients/pom.xml clients/pom.xml
 
-RUN mvn -B -pl fraudr-service -am dependency:go-offline
+RUN mvn -B -pl fraud-service -am dependency:go-offline
 
 COPY . .
-RUN mvn -B -pl fraudr-service -am package -DskipTests
+RUN mvn -B -pl fraud-service -am package -DskipTests
 
 FROM eclipse-temurin:21-jre
 WORKDIR /app
 
-COPY --from=build /app/fraudr-service/target/fraudr-service-*.jar app.jar
+COPY --from=build /app/fraud-service/target/fraud-service-*.jar app.jar
 
 EXPOSE 8082
 
