--- a/fraud-service/Dockerfile
+++ b/fraud-service/Dockerfile
@@ -3,6 +3,9 @@ WORKDIR /app
 
 COPY pom.xml .
 COPY fraud-service/pom.xml fraud-service/pom.xml
+COPY customer-service/pom.xml customer-service/pom.xml
+COPY order-service/pom.xml order-service/pom.xml
+COPY notification-service/pom.xml notification-service/pom.xml
 COPY clients/pom.xml clients/pom.xml
 
 RUN mvn -B -pl fraud-service -am dependency:go-offline
