--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -95,6 +95,14 @@ pipeline {
                 kubectl create secret generic order-service-order-db \\
                   --from-literal=password=${DB_PASSWORD} \\
                   -n test --dry-run=client -o yaml | kubectl apply -f -
+
+                kubectl create secret generic fraud-service-fraud-db \\
+                  --from-literal=password=${DB_PASSWORD} \\
+                  -n test --dry-run=client -o yaml | kubectl apply -f -
+
+                kubectl create secret generic notification-service-notification-db \\
+                  --from-literal=password=${DB_PASSWORD} \\
+                  -n test --dry-run=client -o yaml | kubectl apply -f -
                 """
             }
         }
@@ -182,6 +190,14 @@ pipeline {
                   -n prod --dry-run=client -o yaml | kubectl apply -f -
 
                 kubectl create secret generic order-service-order-db \\
+                  --from-literal=password=${DB_PASSWORD} \\
+                  -n prod --dry-run=client -o yaml | kubectl apply -f -
+
+                kubectl create secret generic fraud-service-fraud-db \\
+                  --from-literal=password=${DB_PASSWORD} \\
+                  -n prod --dry-run=client -o yaml | kubectl apply -f -
+
+                kubectl create secret generic notification-service-notification-db \\
                   --from-literal=password=${DB_PASSWORD} \\
                   -n prod --dry-run=client -o yaml | kubectl apply -f -
                 """
