#use proper Kubernetes service names

--- a/clients/src/main/resources/clients-kube.properties
+++ b/clients/src/main/resources/clients-kube.properties
@@ -1,4 +1,4 @@
-clients.order.url=http://order.prod.local
-clients.customer.url=http://customer.prod.local
-clients.fraud.url=http://fraud.prod.local
-clients.notification.url=http://notification.prod.local
+clients.customer.url=http://customer-service.prod.svc.cluster.local:8081
+clients.fraud.url=http://fraud-service.prod.svc.cluster.local:8082
+clients.notification.url=http://notification-service.prod.svc.cluster.local:8083
+clients.order.url=http://order-service.prod.svc.cluster.local:8084
