#add exchange service

--- a/clients/src/main/resources/clients-kube.properties
+++ b/clients/src/main/resources/clients-kube.properties
@@ -2,3 +2,4 @@ clients.customer.url=http://customer-service.prod.svc.cluster.local:8081
 clients.fraud.url=http://fraud-service.prod.svc.cluster.local:8082
 clients.notification.url=http://notification-service.prod.svc.cluster.local:8083
 clients.order.url=http://order-service.prod.svc.cluster.local:8084
+clients.exchange.url=http://exchange-service.prod.svc.cluster.local:8086
