--- a/clients/src/main/resources/clients-default.properties
+++ b/clients/src/main/resources/clients-default.properties
@@ -2,3 +2,4 @@ clients.order.url=http://localhost:8084
 clients.customer.url=http://localhost:8081
 clients.fraud.url=http://localhost:8082
 clients.notification.url=http://localhost:8083
+clients.exchange.url=http://localhost:8086
