--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,6 +62,27 @@ services:
       timeout: 5s
       retries: 5
 
+  exchange-db:
+    container_name: exchange-db
+    image: postgres:15
+    environment:
+      POSTGRES_DB: exchange
+      POSTGRES_USER: ${PG_USER:-exchange_user}
+      POSTGRES_PASSWORD: ${PG_PASSWORD:-password}
+      PGDATA: /data/postgres
+    volumes:
+      - postgres_exchange:/data/postgres
+    ports:
+      - "5436:5432"
+    networks:
+      - postgres
+    restart: unless-stopped
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
 #  keycloak:
 #    container_name: keycloak-bank
 #    image: quay.io/keycloak/keycloak:26.1.3
