--- a/fraud-service/Dockerfile
+++ b/fraud-service/Dockerfile
@@ -6,6 +6,7 @@ COPY fraud-service/pom.xml fraud-service/pom.xml
 COPY customer-service/pom.xml customer-service/pom.xml
 COPY order-service/pom.xml order-service/pom.xml
 COPY notification-service/pom.xml notification-service/pom.xml
+COPY exchange-service/pom.xml exchange-service/pom.xml
 COPY clients/pom.xml clients/pom.xml
 
 RUN mvn -B -pl fraud-service -am dependency:go-offline
