--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>order-service</module>
         <module>fraud-service</module>
         <module>notification-service</module>
+        <module>exchange-service</module>
         <module>clients</module>
     </modules>
 
