--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -34,6 +34,11 @@ pipeline {
                         sh 'mvn -pl notification-service -am clean test'
                     }
                 }
+                stage('Exchange Service') {
+                    steps {
+                        sh 'mvn -pl exchange-service -am clean test'
+                    }
+                }
             }
         }
 
@@ -44,6 +49,7 @@ pipeline {
                 docker build -t fraud-service:${IMAGE_TAG} -f fraud-service/Dockerfile .
                 docker build -t notification-service:${IMAGE_TAG} -f notification-service/Dockerfile .
                 docker build -t order-service:${IMAGE_TAG} -f order-service/Dockerfile .
+                docker build -t exchange-service:${IMAGE_TAG} -f exchange-service/Dockerfile .
                 """
             }
         }
@@ -103,6 +109,10 @@ pipeline {
                 kubectl create secret generic notification-service-notification-db \\
                   --from-literal=password=${DB_PASSWORD} \\
                   -n test --dry-run=client -o yaml | kubectl apply -f -
+
+                kubectl create secret generic exchange-service-exchange-db \\
+                  --from-literal=password=${DB_PASSWORD} \\
+                  -n test --dry-run=client -o yaml | kubectl apply -f -
                 """
             }
         }
@@ -143,6 +153,15 @@ pipeline {
                   --set image.tag=${IMAGE_TAG} \\
                   --set ingress.enabled=true \\
                   --set ingress.hosts[0].host=notification.test.local \\
+                  --set ingress.hosts[0].paths[0].path="/" \\
+                  --set ingress.hosts[0].paths[0].pathType="ImplementationSpecific"
+
+                helm upgrade --install exchange-service my-microservices-app/charts/exchange-service \\
+                  --namespace test --create-namespace \\
+                  --set image.repository=exchange-service \\
+                  --set image.tag=${IMAGE_TAG} \\
+                  --set ingress.enabled=true \\
+                  --set ingress.hosts[0].host=exchange.test.local \\
                   --set ingress.hosts[0].paths[0].path="/" \\
                   --set ingress.hosts[0].paths[0].pathType="ImplementationSpecific"
                 """
@@ -200,6 +219,10 @@ pipeline {
                 kubectl create secret generic notification-service-notification-db \\
                   --from-literal=password=${DB_PASSWORD} \\
                   -n prod --dry-run=client -o yaml | kubectl apply -f -
+
+                kubectl create secret generic exchange-service-exchange-db \\
+                  --from-literal=password=${DB_PASSWORD} \\
+                  -n prod --dry-run=client -o yaml | kubectl apply -f -
                 """
             }
         }
@@ -240,6 +263,15 @@ pipeline {
                   --set image.tag=${IMAGE_TAG} \\
                   --set ingress.enabled=true \\
                   --set ingress.hosts[0].host=notification.prod.local \\
+                  --set ingress.hosts[0].paths[0].path="/" \\
+                  --set ingress.hosts[0].paths[0].pathType="ImplementationSpecific"
+
+                helm upgrade --install exchange-service my-microservices-app/charts/exchange-service \\
+                  --namespace prod --create-namespace \\
+                  --set image.repository=exchange-service \\
+                  --set image.tag=${IMAGE_TAG} \\
+                  --set ingress.enabled=true \\
+                  --set ingress.hosts[0].host=exchange.prod.local \\
                   --set ingress.hosts[0].paths[0].path="/" \\
                   --set ingress.hosts[0].paths[0].pathType="ImplementationSpecific"
                 """
