#add exchange-generator-service

--- a/customer-service/Dockerfile
+++ b/customer-service/Dockerfile
@@ -9,6 +9,7 @@ COPY order-service/pom.xml order-service/pom.xml
 COPY fraud-service/pom.xml fraud-service/pom.xml
 COPY notification-service/pom.xml notification-service/pom.xml
 COPY exchange-service/pom.xml exchange-service/pom.xml
+COPY exchange-generator-service/pom.xml exchange-generator-service/pom.xml
 COPY clients/pom.xml clients/pom.xml
 
 # Copy dependencies (to cache them) without src
