--- a/notification-service/Dockerfile
+++ b/notification-service/Dockerfile
@@ -7,6 +7,7 @@ COPY fraud-service/pom.xml fraud-service/pom.xml
 COPY customer-service/pom.xml customer-service/pom.xml
 COPY order-service/pom.xml order-service/pom.xml
 COPY exchange-service/pom.xml exchange-service/pom.xml
+COPY exchange-generator-service/pom.xml exchange-generator-service/pom.xml
 COPY clients/pom.xml clients/pom.xml
 
 RUN mvn -B -pl notification-service -am dependency:go-offline
