--- a/exchange-service/Dockerfile
+++ b/exchange-service/Dockerfile
@@ -3,6 +3,7 @@ WORKDIR /app
 
 COPY pom.xml .
 COPY exchange-service/pom.xml exchange-service/pom.xml
+COPY exchange-generator-service/pom.xml exchange-generator-service/pom.xml
 COPY order-service/pom.xml order-service/pom.xml
 COPY customer-service/pom.xml customer-service/pom.xml
 COPY fraud-service/pom.xml fraud-service/pom.xml
