--- a/order-service/Dockerfile
+++ b/order-service/Dockerfile
@@ -7,6 +7,7 @@ COPY customer-service/pom.xml customer-service/pom.xml
 COPY fraud-service/pom.xml fraud-service/pom.xml
 COPY notification-service/pom.xml notification-service/pom.xml
 COPY exchange-service/pom.xml exchange-service/pom.xml
+COPY exchange-generator-service/pom.xml exchange-generator-service/pom.xml
 COPY clients/pom.xml clients/pom.xml
 
 RUN mvn -B -pl order-service -am dependency:go-offline
